fix: fixed overlapping css selectors with create tag underline styling

--- a/src/resources/css/exp-movie.css
+++ b/src/resources/css/exp-movie.css
@@ -363,6 +363,9 @@ span {
 .tag {
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+#create-tag {
   cursor: pointer;
 }
 
